--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,15 @@
   ],
   "parserOptions": {
     "project": "./tsconfig.json"
-  }
+  },
+  "import/no-extraneous-dependencies": [
+    "error",
+    {
+      "devDependencies": [
+        "test/**"
+      ],
+      "optionalDependencies": false,
+      "peerDependencies": false
+    }
+  ]
 }
