added pre-commit hook for eslint and prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,6 @@
 {
-  "extends": [
-    "airbnb",
-    "airbnb-typescript",
-    "prettier"
-  ],
+  "extends": ["airbnb", "airbnb-typescript", "prettier"],
   "parserOptions": {
     "project": "./tsconfig.json"
-  },
-  "import/no-extraneous-dependencies": [
-    "error",
-    {
-      "devDependencies": [
-        "test/**"
-      ],
-      "optionalDependencies": false,
-      "peerDependencies": false
-    }
-  ]
+  }
 }
