--- a/package.json
+++ b/package.json
@@ -6,8 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint-fix": "npx eslint . --ext .js,.jsx,.ts,.tsx --fix"
+    "lint": "eslint ./",
+    "lint-fix": "eslint ./ --fix",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
+  },
+  "lint-staged": {
+    "*.js": "eslint",
+    "*.ts": "eslint",
+    "*.jsx": "eslint",
+    "*.tsx": "eslint",
+    "*.json": "eslint",
+    "*.md": "eslint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && pretty-quick --staged"
+    }
   },
   "dependencies": {
     "next": "13.5.6",
@@ -35,7 +49,11 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
+    "lint-staged": "^15.0.2",
+    "prettier": "^3.0.3",
+    "pretty-quick": "^3.1.3",
     "typescript": "^5"
   }
 }
